--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -48,8 +48,12 @@ navbar
     gap: 5px;
     color: #f71;
     font-size: 18px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-family: 'Roboto-Bold';
 }
 
@@ -98,7 +102,8 @@ card-plan
     background-color: #fff;
     padding: 1rem 1.5rem;
     border: 1px solid rgba(0, 0, 0, 0.07);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
 
 .card-plan-top>.title {
@@ -123,9 +128,15 @@ card-plan
     width: 15px;
     height: 15px;
     color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     border-radius: 50%;
     background-color: #f71;
     -webkit-border-radius: 50%;
@@ -151,7 +162,8 @@ mobileMenu
     position: relative;
     height: 60px;
     background-color: #fff;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     border: solid 1px rgba(0, 0, 0, 0.03);
     position: fixed;
     top: 0;
@@ -162,17 +174,27 @@ mobileMenu
 
 .mobileMenu-top [class*="container"] {
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .mobileMenu-top .nav-app {
     gap: 5px;
     color: #f71;
     font-size: 18px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-family: 'Roboto-Bold';
 }
 
@@ -180,10 +202,19 @@ mobileMenu
     width: 35px;
     height: 28px;
     border: solid 1px #f71;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 3px;
 }
 
@@ -202,11 +233,17 @@ mobileMenu
     max-width: 100%;
     position: fixed;
     background-color: #fff;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
+    -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
     border: solid 1px rgba(0, 0, 0, 0.03);
     z-index: 111111;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     transition: 0.2s ease;
     -webkit-transition: 0.2s ease;
     -moz-transition: 0.2s ease;
@@ -224,17 +261,27 @@ mobileMenu
 
 .mmItem a,
 .mmItem span:not(.bi-cart) {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 45px;
     width: 100%;
     padding: 0 2rem;
 }
 
 .mmItem span:not(.bi-cart) {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .mmItem:last-of-type {
@@ -249,16 +296,24 @@ mobileMenu
 }
 
 .mmItem a:has(.count) {
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .mmItem a:has(.count) .count {
     width: 20px;
     height: 20px;
     color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     border-radius: 4px;
     background-color: rgba(255, 120, 17, 0.788);
     -webkit-border-radius: 4px;
@@ -268,9 +323,16 @@ mobileMenu
 }
 
 .mmItem a:has(.bi-cart) span {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 100%;
 }
 
@@ -301,19 +363,29 @@ faqs
     background-color: #fff;
     border: solid 1px rgba(0, 0, 0, 0.1);
     border-left: 4px solid #f71;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.03);
+    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.03);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.03);
     cursor: pointer;
 }
 
 .faqItem-top span {
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 0 1rem;
     pointer-events: none;
-    justify-content: space-between;
-    flex-direction: row-reverse;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
 }
 
 .faqItem-body {
@@ -399,15 +471,22 @@ footer*/
     /*height: 76vh;
     */
     height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: relative;
     background: url('../../img/studio-bg.jpg') no-repeat;
     background-size: cover;
     background-position: center;
-    transform: rotateX(360deg);
+    -webkit-transform: rotateX(360deg);
+            transform: rotateX(360deg);
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .wallpaper>* {
@@ -427,8 +506,12 @@ footer*/
 
 .wall-data .actions {
     width: 100%;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .no-top {
@@ -444,13 +527,18 @@ footer*/
     height: 100%;
     position: absolute;
     opacity: 0.9;
+    background: -webkit-gradient(linear, right top, left top, from(#000), to(rgba(0, 0, 0, 0.6)));
     background: linear-gradient(to left, #000, rgba(0, 0, 0, 0.6));
 }
 
 .wallpaper .sx-container {
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     z-index: 111;
     position: relative;
 }
@@ -470,9 +558,15 @@ footer*/
     z-index: 11111111111111111;
     background-color: #fff;
     opacity: 0.99;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 10px;
 }
 
@@ -483,7 +577,8 @@ footer*/
     aspect-ratio: 1/1;
     border: 6px solid;
     border-color: #FF4611 rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25);
-    animation: rotate 2s ease infinite;
+    -webkit-animation: rotate 2s ease infinite;
+            animation: rotate 2s ease infinite;
 }
 
 .loader.end-animation {
@@ -491,18 +586,35 @@ footer*/
 }
 
 .loader.end-animation .spin {
-    animation: none;
+    -webkit-animation: none;
+            animation: none;
+}
+
+@-webkit-keyframes rotate {
+
+    0%,
+    100% {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+    }
+
+    20% {
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+    }
 }
 
 @keyframes rotate {
 
     0%,
     100% {
-        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
     }
 
     20% {
-        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
     }
 }
 
@@ -538,10 +650,16 @@ footer*/
     height: 380px;
     padding: 0;
     margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: #fff;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     border: solid 1px rgba(0, 0, 0, 0.1);
 }
 
@@ -582,9 +700,15 @@ footer*/
     color: #000;
     border: solid 1px #fff;
     background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
 }
 
@@ -627,7 +751,8 @@ footer*/
 .auths form > div > div {
     background-color: #fff;
     border: solid 1px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -644,8 +769,10 @@ Notifications
     position: fixed;
     background-color: #fff;
     z-index: 11111111111111;
+    -webkit-transition: 0.2s ease-in-out;
     transition: 0.2s ease-in-out;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .notification.active {
@@ -657,9 +784,15 @@ Notifications
     width: 100%;
     height: 25px;
     font-family: 'Roboto-Regular';
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     background-color: #f71;
     color: #fff;
     padding: 0 1rem;
@@ -686,8 +819,13 @@ Notifications
 }
 
 .notification-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     line-height: 1.2;
     color: #000;
     width: 100%;
@@ -704,17 +842,27 @@ Notifications
 .notification-item .__title {
     font-family: 'Roboto-Bold';
     font-size: 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 0.5rem;
     width: 100%;
     margin-bottom: 0.3rem;
 }
 
 .notification-item .__title > .bi {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 16px;
     height: 16px;
     background-color: #f71;
@@ -724,6 +872,8 @@ Notifications
 
 .notification-text {
     font-size: 14px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     height: 35px;
@@ -779,7 +929,8 @@ Overlay
 .contain_choose {
     position: relative;
     border: solid 1px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
 }
 
@@ -797,11 +948,13 @@ Overlay
     border-radius: 4px;
     opacity: 0.2;
     z-index: 111111111;
+    -webkit-transition: background-color 0.2s ease, cursor 0.2s ease;
     transition: background-color 0.2s ease, cursor 0.2s ease;
 }
 
 .contain_choose:hover .target_visible {
     background-color: #000;
+    cursor: -webkit-zoom-in;
     cursor: zoom-in;
 }
 
@@ -818,4 +971,227 @@ Overlay
        object-fit: cover;
     -o-object-position: center;
        object-position: center;
+}
+
+
+
+
+.navbar-menu {
+    outline: none;
+    width: 38px;
+    height: 75%;
+    border: solid 1px rgba(0, 0, 0, 0.3);
+    background-color: #f2f2f2;
+    background-color: transparent;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 4px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+button:focus {
+    outline: none;
+}
+
+.navbar-menu .line {
+    display: block;
+    width: 80%;
+    height: 2px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.navbar-title {
+    display: block;
+    font-family: 'GeneralSans-Bold';
+    margin-left: 10px;
+}
+
+.navbar .link {
+    width: 38px;
+    height: 38px;
+    aspect-ratio: 1/1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border: solid 1px rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.navbar .link span {
+    pointer-events: none;
+}
+
+.navbar .link + .link {
+    margin-left: 1rem;
+}
+
+.navbar .link:has(.letter) {
+    border-color: transparent;
+}
+
+.sidebar-nav {
+    top: 0;
+    left: 0;
+    left: -100%;
+    width: 260px;
+    height: 100%;
+    position: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    z-index: 11111111111;
+    background-color: #fff;
+    border-right: solid 1px rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 2px 1px rgba(0, 0, 0, 0.05);
+    scrollbar-width: none;
+    -webkit-scrollbar-width: none;
+    overflow-y: auto;
+    -webkit-transition: left 0.2s ease;
+    transition: left 0.2s ease;
+}
+
+.sidebar-nav.active {
+    left: 0;
+}
+
+.sidebar-nav .sidebar-nav-title {
+    padding: 0 1rem;
+    height: 45px;
+    line-height: 45px;
+}
+.sidebar-nav .link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 90%;
+    height: 45px;
+    gap: 15px;
+    margin: 0 auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 1rem;
+    color: #000;
+    font-size: 17px;
+    font-family: 'Roboto-Regular';
+    border-radius: 4px;
+    -webkit-transition: background-color 0.1s ease, color 0.1s ease;
+    transition: background-color 0.1s ease, color 0.1s ease;
+}
+
+.sidebar-nav .link:hover {
+    background-color: #E8EBEE
+}
+
+.sidebar-nav .link.active,
+.sidebar-nav .link.active:hover {
+    color: #fff;
+    background-color: #FF5E31;
+}
+
+.sidebar-nav-close {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #0d0f11;
+    color: #fff;
+    width: 30px;
+    height: 30px;
+    aspect-ratio: 1/1;
+    cursor: pointer;
+    border-radius: 2px;
+}
+
+.link-brand {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #FF5E31;
+    color: #fff;
+    width: 25px;
+    aspect-ratio: 1/1;
+    height: 25px;
+}
+
+.card-website {
+    width: 100%;
+    background-color: #fdfdfd;
+    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border: solid 0.5px rgba(0, 0, 0, 0.1);
+}
+
+.card-website a {
+    /*color: #FF734C;*/
+}
+
+.card-website:hover {
+    background-color: #E8EBEE;
+}
+
+.card-website + .card-website {
+    border-top-color: transparent;
+}
+
+.card-website-contain {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    min-height: 40px;
+    font-family: 'Roboto-Regular';
+}
+
+.card-website-contain .has-items a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 25px;
+    height: 25px;
+    aspect-ratio: 1/1;
+}
+
+.has-websites {
+    overflow-x: auto;
 }
