--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -1195,3 +1195,131 @@ button:focus {
 .has-websites {
     overflow-x: auto;
 }
+
+
+
+.all-clients {
+    width: 100%;
+    position: -webkit-sticky;
+    position: sticky;
+}
+
+.client {
+    width: 100%;
+    height: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    border-top: solid 1px rgba(0, 0, 0, 0.1);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+    padding: 10px 5px;
+    cursor: pointer;
+}
+
+.client + .client {
+    border-top-color: transparent;
+}
+
+.client.active,
+.client:hover {
+    background-color: #EEF4F6;
+}
+
+.client .letter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 30px;
+    height: 30px;
+    aspect-ratio: 1/1;
+    background-color: #d1d1d1;
+    color: #fff;
+    border-radius: 50%;
+}
+
+.dot-status {
+    width: 10px;
+    height: 10px;
+    aspect-ratio: 1/1;
+    background-color: #FF9375;
+    border-radius: 50%;
+}
+
+
+.omit-text {
+    text-overflow: ellipsis; /* enables ellipsis */
+    white-space: nowrap; /* keeps the text in a single line */
+    overflow: hidden; /* keeps the element from overflowing its parent */
+}
+
+.omit {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+.inbox-contain {
+    width: 100%;
+    position: relative;
+    background-color: #fff;
+    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    border-top: solid 4px #FF9375;
+    padding: 1rem;
+}
+
+.inbox-top {
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.inbox-top .bi.bi-search {
+    position: absolute;
+    right: 3%;
+}
+
+.inbox {
+    width: 100%;
+    height: 75px;
+    font-family: 'GeneralSans-Regular';
+    color: #000 !important;
+}
+
+.inbox:nth-child(even) {
+    background-color: #F4F6F9;
+}
+
+.inbox:hover {
+    background-color: #EEF4F6;
+}
+
+.inbox .box {
+    width: 20px;
+    height: 20px;
+    display: block;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.inbox div:has(.bold) {
+    font-size: 15px;
+}
+
+.inbox span.col-3 {
+    color: #FF9375;
+}
